Minor tweaks to fix some functions that were not allowing app to run. Hadd to comment plot EBSA section and MARFIS.

--- a/app/Rmd/intro_EN.Rmd
+++ b/app/Rmd/intro_EN.Rmd
@@ -55,6 +55,9 @@ site <- sf::st_centroid(studyArea)
 #```{r child = '../Rmd/report_fish_EN.Rmd'}
 #```
 
+#```{r child = '../Rmd/report_planning_EN.Rmd'}
+#```
+
 ```{r parameters for area_map.r, echo=FALSE, include=FALSE, cache=FALSE}
 land_layer<-land50k_sf
 
