--- a/app/Rmd/report_fish_EN.Rmd
+++ b/app/Rmd/report_fish_EN.Rmd
@@ -117,27 +117,27 @@ isdb_summary_table<- isdb_summary_table %>%
   dplyr::rename("Total organisms recorded in polygon"=Total_organisms_recorded_in_polygon,"Listed organisms recorded in polygon"=LISTED_organisms_recorded_in_polygon)
 ```
 ```{r, include=FALSE, cache=FALSE}
-marfis1 <- marfis1 %>% dplyr::filter(DATE_FISHED >= minYear)
-marfis1$YEAR <- lubridate::year(marfis1$DATE_FISHED)
-marfis_sf <- sf::st_as_sf(marfis1, coords = c("LONGITUDE", "LATITUDE"), crs = 4326)
-marfis_intersect <- sf::st_intersection(marfis_sf,studyArea)
+# marfis1 <- marfis1 %>% dplyr::filter(DATE_FISHED >= minYear)
+# marfis1$YEAR <- lubridate::year(marfis1$DATE_FISHED)
+# marfis_sf <- sf::st_as_sf(marfis1, coords = c("LONGITUDE", "LATITUDE"), crs = 4326)
+# marfis_intersect <- sf::st_intersection(marfis_sf,studyArea)
 
 # marfis_intersect <- marfis_intersect %>%
 #   tidyr::extract(geometry, c('long', 'lat'), '\\((.*), (.*)\\)', convert = TRUE)
-marfis_sites <- data.frame(longitude = marfis_intersect$long, latitude = marfis_intersect$lat)
-
-marfis_table <- table_marfis(marfis_intersect)
-marfis_SAR_table <- table_marfis_SAR(marfis_intersect, listed_fish_invert_species)
+# marfis_sites <- data.frame(longitude = marfis_intersect$long, latitude = marfis_intersect$lat)
+# 
+# marfis_table <- table_marfis(marfis_intersect)
+# marfis_SAR_table <- table_marfis_SAR(marfis_intersect, listed_fish_invert_species)
 ```
 
 ```{r}
-Total_number_records_marfis <- sum(marfis_table$Records)
-Total_number_SAR_records_marfis <- sum(marfis_SAR_table$Records)
-marfis_summary_table<-data.frame(Total_organisms_recorded_in_polygon="", LISTED_organisms_recorded_in_polygon="")
-marfis_summary_table[1,1] <- Total_number_records_marfis
-marfis_summary_table[1,2] <- Total_number_SAR_records_marfis
-marfis_summary_table <- marfis_summary_table %>%
-  dplyr::rename("Total organisms recorded in polygon"=Total_organisms_recorded_in_polygon, "Listed organisms recorded in polygon"=LISTED_organisms_recorded_in_polygon)
+# Total_number_records_marfis <- sum(marfis_table$Records)
+# Total_number_SAR_records_marfis <- sum(marfis_SAR_table$Records)
+# marfis_summary_table<-data.frame(Total_organisms_recorded_in_polygon="", LISTED_organisms_recorded_in_polygon="")
+# marfis_summary_table[1,1] <- Total_number_records_marfis
+# marfis_summary_table[1,2] <- Total_number_SAR_records_marfis
+# marfis_summary_table <- marfis_summary_table %>%
+#   dplyr::rename("Total organisms recorded in polygon"=Total_organisms_recorded_in_polygon, "Listed organisms recorded in polygon"=LISTED_organisms_recorded_in_polygon)
 ```
 *
 ```{r, comment="", prompt=TRUE, echo=FALSE, results='asis'}
@@ -152,20 +152,20 @@ writeLines(Report_isdb)
 
 *
 ```{r, comment="", prompt=TRUE, echo=FALSE, results='asis'}
-Report_marfis<-if(Total_number_SAR_records_marfis < 1){
-    "There are no relevant records in the Maritimes Fishery Information System (MARFIS) for this search area."
-  } else {
-    "There are relevant records in the Maritimes Fishery Information System (MARFIS) for this search area."
-  }
-Report_marfis<-noquote(Report_marfis)
-writeLines(Report_marfis)
+# Report_marfis<-if(Total_number_SAR_records_marfis < 1){
+#     "There are no relevant records in the Maritimes Fishery Information System (MARFIS) for this search area."
+#   } else {
+#     "There are relevant records in the Maritimes Fishery Information System (MARFIS) for this search area."
+#   }
+# Report_marfis<-noquote(Report_marfis)
+# writeLines(Report_marfis)
 ```
 
 ```{r, fig.height=8, fig.width=11, fig.cap='Quality Tier: Medium. Security level: Protected B. Map showing the search area defined by the user: location of the proposed project/activity is highlighted in yellow (input polygon), surrounded by an exposure zone or user-defined buffer area in blue. Buffer area was used to query aggregated information from Maritimes Fishery Information System (MARFIS) and/or Industry Survey Database (ISDB) observation records shown as black points, for all species. Rule of five was not applied.'}
 site_map(studyArea,site,land50k_sf,10,bounds_sf)+
   geom_point(data = isdb_sites, aes(x = longitude, y = latitude), size = 2,
-        shape = 16, fill = "black")+
-  geom_sf(data = marfis_sites, size = 2, shape = 16, fill = "black")
+        shape = 16, fill = "black") #+
+  #geom_sf(data = marfis_sites, size = 2, shape = 16, fill = "black")
 ```
 ```{r}
  knitr::kable(isdb_SAR_table, align="l", caption="Quality Tier: Medium. Security level: Protected B. Industry Survey Database (ISDB) observation records of species contained within the search area and listed by the <i>Species At Risk Act</i> (SARA), assessed by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC), or included in the Wild species listings (B=Breeding, N=non-breeding, M=migratory). <b>The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area.</b>", booktabs = T, escape = F, linesep="")
@@ -173,18 +173,18 @@ site_map(studyArea,site,land50k_sf,10,bounds_sf)+
 ```
 <br><br>
 ```{r}
- knitr::kable(isdb_table, align="l", caption="Quality Tier: Medium. Security level: Protected B. Industry Survey Database (ISDB) observation records of <u>all species</u> contained within the search area, summarized by species or species group. <b>The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area.</b>", booktabs = T, escape = F, linesep="")
+ # knitr::kable(isdb_table, align="l", caption="Quality Tier: Medium. Security level: Protected B. Industry Survey Database (ISDB) observation records of <u>all species</u> contained within the search area, summarized by species or species group. <b>The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area.</b>", booktabs = T, escape = F, linesep="")
 # %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
 ```
 <br><br>
 
 ```{r}
- knitr::kable(marfis_SAR_table, align="l", caption="Quality Tier: Medium. Security level: Protected B. Maritimes Fishery Information System (MARFIS) observation records of species contained within the search area and listed by the <i>Species At Risk Act</i> (SARA), assessed by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC), or included in the Wild species listings (B=Breeding, N=non-breeding, M=migratory). <b>The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area.</b>", booktabs = T, escape = F, linesep="")
+ # knitr::kable(marfis_SAR_table, align="l", caption="Quality Tier: Medium. Security level: Protected B. Maritimes Fishery Information System (MARFIS) observation records of species contained within the search area and listed by the <i>Species At Risk Act</i> (SARA), assessed by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC), or included in the Wild species listings (B=Breeding, N=non-breeding, M=migratory). <b>The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area.</b>", booktabs = T, escape = F, linesep="")
 # %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
 ```
 <br><br>
 ```{r}
- knitr::kable(marfis_table, caption="Quality Tier: Medium. Security level: Protected B. Maritimes Fishery Information System (MARFIS) observation records of <u>all species</u> contained within the search area, summarized by species or species group. <b>The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area.</b>", booktabs = T, escape = F, linesep="") %>% column_spec(1, width="15cm")
+ # knitr::kable(marfis_table, caption="Quality Tier: Medium. Security level: Protected B. Maritimes Fishery Information System (MARFIS) observation records of <u>all species</u> contained within the search area, summarized by species or species group. <b>The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area.</b>", booktabs = T, escape = F, linesep="") %>% column_spec(1, width="15cm")
 # %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
 ```
 ### **Ocean Biodiversity Information System (OBIS)**  
