--- a/app/Rmd/report_planning_EN.Rmd
+++ b/app/Rmd/report_planning_EN.Rmd
@@ -44,5 +44,5 @@ EBSA_bioregion(EBSA_sf, studyArea)
 ```
 
 ```{r, fig.height=8, fig.width=11, fig.cap= 'Quality Tier: High. Security level: none. Map showing Ecologically and Biologically Significant Areas (EBSA; pink) relative to the search area defined by the user: location of the proposed project/activity is highlighted in yellow (input polygon), surrounded by an exposure zone or user-defined buffer area in blue.'}
-plot_EBSA(EBSA_sf, studyArea, land10m_sf, 300, bounds_sf)
+#plot_EBSA(EBSA_sf, studyArea, land10m_sf, 300, bounds_sf)
 ```
