--- a/app/Rmd/report_habitat_EN.Rmd
+++ b/app/Rmd/report_habitat_EN.Rmd
@@ -32,9 +32,9 @@ rockweed_result<-as.numeric(nrow(rockweed_intersect))
 ```
 
 ```{r, fig.height=8, fig.width=11, fig.cap='Quality Tier: Medium. Security level: none. Map showing the search area defined by the user: location of the proposed project/activity is highlighted in yellow (input polygon), surrounded by an exposure zone or user-defined buffer area in blue. Figure shows overlap between the search area and satellite-based maps of intertidal vegetation and rockweed presence polygons.'}
-if(rockweed_result > 1){
-plot_rockweed(rockweed_sf, areaMap, bboxMap)
-} else {NULL}
+# if(rockweed_result > 1){
+# plot_rockweed(rockweed_sf, areaMap, bboxMap)
+# } else {NULL}
 ```
 
 ```{r table rockweed, echo=FALSE, cache=FALSE, include = FALSE}
