--- a/app/Rmd/intro_EN.Rmd
+++ b/app/Rmd/intro_EN.Rmd
@@ -30,6 +30,7 @@ knitr::opts_chunk$set(echo = FALSE, warning=FALSE, message=FALSE, fig.align="lef
 
 ```{r load data and functions, echo=FALSE, include=FALSE, cache=FALSE}
 minYear <- 2010
+#readRDS()
 load("../data/OpenData.RData")
 load("../data/OpenData_sardist.RData")
 load("../data/SecureData.RData")
@@ -54,9 +55,8 @@ site <- sf::st_centroid(studyArea)
 # ```
 #```{r child = '../Rmd/report_fish_EN.Rmd'}
 #```
-
-#```{r child = '../Rmd/report_planning_EN.Rmd'}
-#```
+# ```{r child = c('../Rmd/report_cetaceans_EN.Rmd', 'report_fish_EN.Rmd')}
+# ```
 
 ```{r parameters for area_map.r, echo=FALSE, include=FALSE, cache=FALSE}
 land_layer<-land50k_sf
