--- a/app/Rmd/report_habitat_FR.Rmd
+++ b/app/Rmd/report_habitat_FR.Rmd
@@ -20,8 +20,34 @@ Remarques sur les données :
 
 #### ***Résultats de la recherche sur la végétation intertidale et le fucus, par zone***  
 
-**under-development**
+```{r overlap rockweed, echo=FALSE, results='asis'}
+rockweed_intersect <- st_intersection(studyArea,st_make_valid(rockweed_sf))
+rockweed_result<-as.numeric(nrow(rockweed_intersect))
+```
+*
+```{r overlap rockweed output, echo=FALSE, results='asis'}
+ Query_output_rockweed<-if(rockweed_result < 1){"There are no relevant records of predicted intertidal vegetation for this search area."
+   } else {"There are relevant records of predicted intertidal vegetation for this search area."}
+ Query_output_rockweed<-noquote(Query_output_rockweed)
+ writeLines(Query_output_rockweed)
+```
 
 ```{r, fig.height=8, fig.width=11, fig.cap='Quality Tier: Medium. Security level: none. Map showing the search area defined by the user: location of the proposed project/activity is highlighted in yellow (input polygon), surrounded by an exposure zone or user-defined buffer area in blue. Figure shows overlap between the search area and satellite-based maps of intertidal vegetation and rockweed presence polygons.'}
+ # if(rockweed_result > 1){
+ # plot_rockweed(rockweed_sf, areaMap, bboxMap)
+ # } else {NULL}
+```
+
+```{r table rockweed, echo=FALSE, cache=FALSE, include = FALSE}
+if(rockweed_result > 1){
+rwTable <- rockweedStats(rockweed_sf, studyArea)
+} else {NULL}
+```
+```{r}
+if(rockweed_result > 1){
+knitr::kable(rwTable,align="l",
+             caption = "Number of vegetation polygons and surface area occupied by each category for the study area. Total intertidal vegetations is a sum of all categories.", booktabs = T, escape = F, linesep="") %>%
+  kable_styling(bootstrap_options = "striped", full_width = T, position = "left")
+} else {NULL}
 ```
 
